--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar>
   <span>Node Soc. Coop. application</span>
+  <span class="spacer"></span>
+  <a mat-button routerLink="/vacancies">Vacancies</a>
+  <a mat-button routerLink="/insert-vacancy">Insert-vacancy</a>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
