--- a/src/app/insert-vacancy/insert-vacancy.component.scss
+++ b/src/app/insert-vacancy/insert-vacancy.component.scss
@@ -1,12 +1,14 @@
+//// MAIN-SECTION CONFIGURATION ////
 $main-section-padding: 15px;
-
+$main-section-max-width: 720px;
 #main-section {
-  max-width: 720px;
+  max-width: $main-section-max-width;
   margin: auto;
   margin-top: 20px;
   padding: $main-section-padding;
   position: relative;
 }
+///////////////////////////////////
 
 mat-form-field {
   display: block;
@@ -17,4 +19,8 @@ button[type=submit] {
   display: block;
   position: absolute;
   right: $main-section-padding;
+}
+
+mat-icon {
+  padding-left: 5px;
 }
