--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    // background-color: #f5f5f5;
+}
+
+//// RESTYILING MAT-CARD ////
+mat-card {
+    padding: 30px 30px !important;
+    box-shadow: none !important;
+    border: 1px solid rgba(0,0,0,.12) !important;
+    border-radius: 4px !important;
+    overflow: hidden;
+}
+////////////////////////////
